--- a/FinalProj_App/app/src/main/res/layout/activity_pager.xml
+++ b/FinalProj_App/app/src/main/res/layout/activity_pager.xml
@@ -7,13 +7,22 @@
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              tools:context=".PagerActivity">
-
-
     <android.support.v4.view.ViewPager
-            android:id="@+id/container"
+            android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-    />
-    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+            tools:context=".MainActivity">
+        <android.support.v4.view.PagerTitleStrip
+                android:id="@+id/pager_title_strip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:background="#33b5e5"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="#fff"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"/>
+    </android.support.v4.view.ViewPager>
 
 </FrameLayout>
