--- a/FinalProj_App/app/src/main/res/menu/menu_pager.xml
+++ b/FinalProj_App/app/src/main/res/menu/menu_pager.xml
@@ -3,7 +3,7 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="edu.pdx.ece558f18.bhenson.finalproj_app.PagerActivity">
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+          android:title="asdf"
           android:orderInCategory="100"
           app:showAsAction="never"/>
 </menu>
