--- a/FinalProj_App/app/src/main/res/layout/activity_login.xml
+++ b/FinalProj_App/app/src/main/res/layout/activity_login.xml
@@ -9,16 +9,16 @@
               android:layout_marginTop="@dimen/activity_vertical_margin"
               android:layout_marginLeft="@dimen/activity_horizontal_margin"
               android:layout_marginRight="@dimen/activity_horizontal_margin"
-              android:gravity="center">
+              android:gravity="center_horizontal">
 
-    <!-- TODO: either use this progressbar somehow or delete it! -->
     <ProgressBar
             android:id="@+id/login_progress"
-            style="?android:attr/progressBarStyleLarge"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:visibility="gone"/>
+            android:visibility="invisible"
+            android:scaleX="4"/>
 
     <ScrollView
             android:id="@+id/login_form"
