--- a/FinalProj_App/app/src/main/res/layout/fragment_control.xml
+++ b/FinalProj_App/app/src/main/res/layout/fragment_control.xml
@@ -15,6 +15,8 @@
                 android:text="@string/error"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:id="@+id/tv_connection_status"/>
         <Switch
                 android:layout_width="match_parent"
