--- a/FinalProj_App/app/src/main/res/layout/activity_login.xml
+++ b/FinalProj_App/app/src/main/res/layout/activity_login.xml
@@ -13,13 +13,11 @@
 
     <ProgressBar
             android:id="@+id/login_progress"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:visibility="invisible"
-            android:scaleX="4"/>
-
+            android:visibility="invisible"/>
     <ScrollView
             android:id="@+id/login_form"
             android:layout_width="match_parent"
