--- a/FinalProj_App/app/src/main/res/layout/fragment_camera.xml
+++ b/FinalProj_App/app/src/main/res/layout/fragment_camera.xml
@@ -9,7 +9,8 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="15dp">
+            android:layout_margin="15dp"
+            android:gravity="center_horizontal">
         <!-- The image should always have 640::480 aspect ratio, whatever its actual resolution is -->
         <ImageView
                 android:src="@drawable/no_image_640x480"
@@ -36,16 +37,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/butt_hires"/>
-        <Button
-                android:text="@string/begin_voip_label"
+        <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/butt_voip"/>
+                android:id="@+id/call_progress"
+                android:visibility="invisible"/>
         <Button
-                android:text="@string/save_image_label"
+                android:text="@string/error"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/butt_save"/>
+                android:id="@+id/butt_voip"
+                android:enabled="false"/>
+        <ImageView
+                android:src="@drawable/speaker_v2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
+                android:id="@+id/imageView_speaker"
+                android:visibility="invisible"/>
     </LinearLayout>
 
 </FrameLayout>
