replaced the VOIP code with code to record & upload a sound file, i think it works?

--- a/FinalProj_App/app/src/main/res/layout/fragment_camera.xml
+++ b/FinalProj_App/app/src/main/res/layout/fragment_camera.xml
@@ -47,7 +47,7 @@
                 android:text="@string/error"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/butt_voip"
+                android:id="@+id/butt_record"
                 android:enabled="false"/>
         <ImageView
                 android:src="@drawable/speaker_v2"
